# fB_DCEMRI_analyser

./: .gitignore  LitReview.md  README.md
.ipynb_checkpoints/: README-checkpoint.md  S3downloader-checkpoint.ipynb
ImageJ/: ExploreSingleDataset.ijm  ExportROIvalues.ijm  LabelROIs  LabelROIs.ijm  ReviewInterVisitRegistration.ijm
docs/: ROIdictionary_and_LUT.xlsx  Summary.md  notes.md
jupyter/: Dicom2NiftiConverter.ipynb  EvaluateRegistrationResults.ipynb  GeneralRegistration.ipynb  GoogleColab_RegistrationWorkflow.ipynb  IndividualRegistrationANTs.ipynb  IndividualRegistrationELASTIX.ipynb  InterVisitsRegistration.ipynb  Review_DICOM_metadata.ipynb  SortDICOMData.ipynb  SummariseResults.ipynb  TestSlicerWithinJpy.ipynb  analysis_summary_20241217.ipynb
jupyter/.ipynb_checkpoints/: Dicom2NiftiConverter-checkpoint.ipynb  EvaluateRegistrationResults-checkpoint.ipynb  GeneralRegistration-checkpoint.ipynb  IndividualRegistrationANTs-checkpoint.ipynb  IndividualRegistrationELASTIX-checkpoint.ipynb  Review_DICOM_metadata-checkpoint.ipynb  S3downloader-checkpoint.ipynb  S3uploader-checkpoint.ipynb  SortDICOMData-checkpoint.ipynb  compare_DICOM_metadata-checkpoint.ipynb
roi_set/: README.md
slicer_extension/DCEMRI_ANTsRegistration/: CMakeLists.txt
slicer_extension/DCEMRI_ANTsRegistration/DataLoader/: CMakeLists.txt  DataLoader.py
slicer_extension/DCEMRI_ANTsRegistration/DataLoader/Resources/UI/: DataLoader.ui
utils/: download_idc.sh  pick_randomly.py  update_gdrive.py
